style.css
/* ... */
.wp-block-quote.is-style-plain {
  border: none;
  padding: 0;
}

.wp-block-pullquote {
  border-style: solid;
  border-width: 2px 0;
  margin: clamp(2rem, 4.5vw, 3.5rem) 0;
  padding: clamp(1.5rem, 3.5vw, 3rem) 1em;
}
.wp-block-pullquote blockquote {
  font-family: "Cal Sans", system-ui, "Segoe UI", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-weight: 500;
  margin: 0;
}
.wp-block-pullquote.alignleft, .wp-block-pullquote.alignright {
  max-width: 100%;
  width: 100%;
}
@media all and (min-width: 560px) {
  .wp-block-pullquote.alignleft, .wp-block-pullquote.alignright {
    max-width: 60%;
  }
}

@media all and (min-width: 992px) {
  .no-sidebar .wp-block-pullquote.alignleft {
    margin-left: -10rem;
  }
}
@media all and (min-width: 992px) {
  .no-sidebar .wp-block-pullquote.alignright {
    margin-right: -10rem;
  }
}

cite,
q {
  font-style: italic;
}

cite {
  font-size: 0.833rem;
  display: block;
}
cite:before {
  content: "- ";
}

table,
pre,
dl {
  margin: 1rem 0 clamp(2rem, 3vw, 2.5rem);
}

hr,
.wp-block-separator {
  border-style: solid;
  border-width: 2px 0 0;
  margin: clamp(2rem, 3.5vw, 3rem) 0;
}

.wp-block-separator {
  width: 25%;
}
.wp-block-separator.is-style-wide {
  width: 100%;
}
.wp-block-separator.is-style-dots {
  border: none;
  width: 100%;
}
.wp-block-separator.is-style-dots:before {
  letter-spacing: 0.75em;
  padding-left: 0.75em;
}

table {
  border-style: solid;
  border-width: 2px;
  border-collapse: collapse;
}
table th, table td {
  border-style: solid;
  border-width: 2px;
  padding: 8px;
}
table th {
  font-size: 0.833rem;
  font-weight: 700;
  letter-spacing: 1px;
  text-transform: uppercase;
}
table td {
  font-size: 0.889rem;
}
table tfoot {
  font-style: italic;
}
table caption {
  font-size: 0.833rem;
  margin-top: 0.75rem;
}
table caption:first-child {
  margin: 0 0 0.5rem;
}

.wp-block-table {
  margin-bottom: 2rem;
}
.wp-block-table.is-style-stripes {
  border-bottom: none;
}
.wp-block-table table {
  margin-bottom: 0.75rem;
}
.wp-block-table table th {
  font-weight: 700;
}

.wp-block-calendar .wp-calendar-table {
  margin-bottom: 0.75rem;
}
.wp-block-calendar .wp-calendar-table th, .wp-block-calendar .wp-calendar-table td {
  border-style: solid;
  border-width: 2px;
}
.wp-block-calendar .wp-calendar-table th {
  font-weight: 700;
  padding: 0.25em;
}
.wp-block-calendar .wp-calendar-table caption {
  font-size: 0.722rem;
  font-weight: 700;
  margin-bottom: 0;
  padding: 8px;
  text-transform: uppercase;
}
.wp-block-calendar .wp-calendar-nav {
  font-size: 0.833rem;
}

pre {
  border-radius: var(--v-radius);
  font-size: 0.889rem;
  padding: 1.625rem;
}
@media all and (min-width: 768px) {
  pre {
    font-size: 0.889rem;
    padding: 2rem;
  }
}

dl {
  border-radius: var(--v-radius);
  padding: clamp(1.625rem, 2.25vw, 2rem);
}
dl dt {
  font-weight: 700;
  margin-bottom: 0.625rem;
}
dl dd {
  font-style: italic;
  margin: 0 0 0.625rem 1.25rem;
}
dl dd:last-child {
  margin-bottom: 0;
}
dl dd + dt {
  margin-top: 1.125rem;
}

ul,
ol {
  margin: 0;
  padding: 0;
}

code,
kbd,
tt,
var {
  display: inline-block;
  padding-left: 3px;
  padding-right: 3px;
  border-radius: calc(var(--v-radius) * 0.3);
}

iframe,
object {
  max-width: 100%;
}

img {
  height: auto;
  max-width: 100%;
}

figure figcaption {
  font-size: 0.833rem;
  font-style: italic;
}

.post-password-form {
  font-size: 0.833rem;
}
.post-password-form label input {
  display: block;
  margin-bottom: 6px;
}

#searchform {
  font-size: 0.833rem;
}
#searchform #searchsubmit {
  margin-top: 3px;
}
@media all and (min-width: 560px) {
  #searchform #searchsubmit {
    margin-top: 0;
  }
}

.wp-block-gallery:not(.alignleft) {
  margin-right: 0;
}
.wp-block-gallery:not(.alignright) {
  margin-left: 0;
}

.wp-caption,
.wp-block-image {
  max-width: 100%;
}

.wp-block-image img + figcaption,
.wp-block-cover img + figcaption {
  margin-top: 0.75rem;
}

.wp-block-media-text {
  gap: 2rem;
  margin: clamp(3rem, 4.4vw, 4rem) 0 3rem;
}
.wp-block-media-text:first-child {
  margin-top: 0;
}
.wp-block-media-text:last-child {
  margin-bottom: 0;
}
.wp-block-media-text .wp-block-media-text__content {
  padding: 8%;
}
.wp-block-media-text:not(.has-background) {
  row-gap: 3rem;
}
.wp-block-media-text:not(.has-background) .wp-block-media-text__media {
  margin-top: 1.5rem;
}
@media all and (min-width: 992px) {
  .wp-block-media-text:not(.has-background) .wp-block-media-text__media {
    margin-top: 0;
  }
}
.wp-block-media-text:not(.has-background) .wp-block-media-text__content {
  padding: 0;
}
@media all and (min-width: 992px) {
  .wp-block-media-text:not(.has-background) .wp-block-media-text__content {
    padding: 8%;
  }
}
.wp-block-media-text.has-background {
  gap: 0;
}
@media all and (min-width: 992px) {
  .wp-block-media-text.has-background .wp-block-media-text__content .wp-block-media-text__content {
    padding: 10% 8% 5%;
  }
}

.entry-content > .wp-block-image,
.entry-content > .wp-block-cover,
.entry-content > .wp-block-video,
.entry-content > .wp-block-audio,
.entry-content > .wp-block-file,
.entry-content > .wp-block-columns,
.entry-content > .wp-block-calendar,
.entry-content > .wp-block-archives,
.entry-content > .wp-block-categories,
.entry-content > .wp-block-search,
.entry-content > .wp-block-social-links,
.entry-content > .wp-block-tag-cloud,
.entry-content > .wp-block-embed,
.entry-content > .wp-block-navigation,
.entry-content > .wp-block-group {
  margin-bottom: 2rem;
}
/* ... */

